# vbot

./: .gitignore  README.md  configurable_voice_agent.py  main.py  pyproject.toml  runner.py  server.py
call_highlights/: 0aa0f897-53a5-4133-bbfc-9a547797fc9c_highlights.txt  2478cdf2-5d1f-4b05-b681-d23b49f129a4_highlights.txt  2huOGPcEbsGXAIBZv6Y8_highlights.txt  40f955d1-e149-4aeb-a8ba-dbbfd08b592b_highlights.txt  6dTfxvpOYWNiXBUa6eQi_highlights.txt  JgO1ySZMOFeX01C61dFU_highlights.txt  Q3txvu6yxeAiB9lorWj5_highlights.txt  aSBXi2MgbTejiD2SuM81_highlights.txt  cfeeacc4-a042-4758-b8ae-733c82d1ce4c_highlights.txt  f5f07c65-6f28-47d6-ad78-404515eb4173_highlights.txt  qOfKYygau5TfTnyuyQKo_highlights.txt
client/: index.html  package-lock.json  package.json  vite.config.js
data/: voice_agent.db
expert_opinion/: 0aa0f897-53a5-4133-bbfc-9a547797fc9c_exp_opinion.txt  2478cdf2-5d1f-4b05-b681-d23b49f129a4_exp_opinion.txt  2huOGPcEbsGXAIBZv6Y8_exp_opinion.txt  40f955d1-e149-4aeb-a8ba-dbbfd08b592b_exp_opinion.txt  6dTfxvpOYWNiXBUa6eQi_exp_opinion.txt  JgO1ySZMOFeX01C61dFU_exp_opinion.txt  Q3txvu6yxeAiB9lorWj5_exp_opinion.txt  aSBXi2MgbTejiD2SuM81_exp_opinion.txt  cfeeacc4-a042-4758-b8ae-733c82d1ce4c_exp_opinion.txt  f5f07c65-6f28-47d6-ad78-404515eb4173_exp_opinion.txt  qOfKYygau5TfTnyuyQKo_exp_opinion.txt
logs/: 0055bb21-0a16-41e2-a720-457bb45ead45.txt  036df367-eec1-4c53-8dc5-1538bfb99fc2.txt  093c3cc2-c595-4b24-b07f-17a3da213540.txt  0a0a7688-6122-493d-9493-10b6d80bbbc4.txt  0a28a2a0-16f0-4b47-947d-358198cf875f.txt  0dd71196-0a4d-4a3d-9a93-d74c9c9810b4.txt  transcript_log.txt  (+33 more)
(+25 files in other folders)
